--- a/payments/templates/payments/offline.html
+++ b/payments/templates/payments/offline.html
@@ -4,7 +4,7 @@
     <h4>Response</h4>
     <div>
         <p>
-            The device is offline.
+            The device is offline or Network is slow.
         </p>
         <a href="{% url 'transaction' 'dispense' txn.id %}" class="btn btn-primary m-1">Try again
             <span class="material-icons">refresh</span>
