Update contact info. change title and app name. change app name in procfile introduce volume unit. Fix conversion from decimal to integral used volume problem. JS is now before end body tag. intro mac_address Only updates of IP address is stored.

--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -1,7 +1,13 @@
 {% extends 'home/base.html' %}
 {% block content %}
-<h5>Contact me: </h5>
+<h5>Contact Us: </h5>
 <div>
-    c/o Kadapalla Nithin Kumar,<br />Kurthi, Pitlam, Kamareddy,<br /> Telangana State, India.
+    <div>
+        <i class="material-icons">email</i> kadapallanithin@gmail.com <br />
+        <i class="material-icons" style="color: white;background-color: green; border:5px solid green; border-radius: 20px;">phone</i> +91 9666962037
+    </div>
+    <div>
+        <i class="material-icons" style="color: blue;">place</i> D-No. 2-108,<br /> Kadapalla Nithin Kumar,<br />Kurthi, Pitlam, Kamareddy,<br /> Telangana State, India - 503187.
+    </div>
 </div>
 {% endblock %}
